# python-modsecurity

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
python/libmodsecurity/: __init__.py  __init__.pyi  _libmodsecurity.pyi  asgi.py
scripts/: build-libmodsecurity.sh
src/: bindings.cpp
tests/: test_basic.py
